--- a/requirements.txt
+++ b/requirements.txt
@@ -128,6 +128,7 @@ Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 flatbuffers==2.0.8+dfsg1.2
 fonttools==4.38.0
+Frozen-Flask==1.0.1
 frozenlist==1.3.3
 fs==2.4.16
 fuse-python==1.0.5
