--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,19 @@
-Package             Version
-------------------- ----------
-anyio               4.2.0
-blinker             1.7.0
-certifi             2023.11.17
-click               8.1.7
-exceptiongroup      1.2.0
-Flask               3.0.0
-h11                 0.14.0
-httpcore            1.0.2
-httpx               0.25.2
-idna                3.6
-importlib-metadata  7.0.1
-itsdangerous        2.1.2
-Jinja2              3.1.2
-MarkupSafe          2.1.3
-pip                 22.0.4
-python-telegram-bot 20.7
-setuptools          58.1.0
-sniffio             1.3.0
-typing_extensions   4.9.0
-Werkzeug            3.0.1
-zipp                3.17.0
+anyio==4.2.0
+blinker==1.7.0
+certifi==2023.11.17
+click==8.1.7
+exceptiongroup==1.2.0
+Flask==3.0.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.2
+idna==3.6
+importlib-metadata==7.0.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+python-telegram-bot==20.7
+sniffio==1.3.0
+typing_extensions==4.9.0
+Werkzeug==3.0.1
+zipp==3.17.0
